# Senior_project

./: .gitignore  README.md  d  frames.gv  output.urdf
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
model_editor_models_backup/2wheelonly/: model.config  model.sdf
model_editor_models_backup/bogie/: model.config  model.sdf
model_editor_models_backup/chassis/: model.config  model.sdf
model_editor_models_backup/cylin/: model.config  model.sdf
model_editor_models_backup/polcar/: model.config  model.sdf
src/: CMakeLists (copy).txt  rocker_bogie_control.py
src/rocker_bogie/: CMakeLists.txt  package.xml
src/rocker_bogie/launch/: amcl.launch  main.launch  navigation.launch  rocker_bogie.launch  slam.launch  test.launch
src/rocker_bogie/map/house/: map.pgm  map.yaml
src/rocker_bogie/map/turtle/: map.pgm  map.yaml
src/rocker_bogie/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml
src/rocker_bogie/rviz/: rocker_bogie.rviz
src/rocker_bogie/src/: base_link_broadcaster.py  frames.gv  joint_state_publisher.py  movement_publisher.py  rocker_bogie_tf_publisher.py  skid_steering_control.py  skid_steering_plugin.cpp
src/rocker_bogie/urdf/: <?xml version="1.xml  color.xacro  plugins.xacro  rocker_bogie.gazebo.xacro  rocker_bogie.urdf.xacro  rocker_bogie.urdf_no_lidar.xacro  rocker_bogie_generated.urdf
src/rocker_bogie/world/: house.world  test_rotate.world  test_runway.world  turtle.world
(+23 files in other folders)
